# RFsignupXX

./: .npmrc  funding.json  index.js  jseiferth-rfsignupxx-1.0.0.tgz  package.json  test.js
my_crate_name/: Cargo.toml  readme.md
my_crate_name/.cargo/: config.toml
my_crate_name/src/: lib.rs
