[package]
name = "rfsignupxx"
version = "0.1.1"
authors = ["JSeiferth <your_email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A test package for RFsignup functionality."
repository = "https://github.com/JSeiferth/RFsignupXX"
homepage = "https://github.com/JSeiferth/RFsignupXX"
readme = "README.md"
keywords = ["signup", "example", "crate"]
categories = ["development-tools", "algorithms"]
documentation = "https://docs.rs/rfsignupxx"
registry = "github" # Add this line to specify GitHub as the registry
